# SCOP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: Build.yml
Base/: CMakeLists.txt
Base/include/Base/: App.h  Camera.h  Input.h  Mesh.h  Model.h  Objects.h  Shader.h  Ui.h  Uniforms.h  Window.h  utility.h
Base/include/Base/GeometricShapes/: Sphere.h
Base/src/: Camera.cpp  Input.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Ui.cpp  Window.cpp  utility.cpp  window_2.cpp
Base/src/GeometricShapes/: Sphere.cpp
Base/src/cocoa/: Window.mm
Base/src/windows/: Window.cpp
Modules/: FindEGL.cmake  FindGLESv3.cmake
SCOP/: CMakeLists.txt
SCOP/res/: gouraud.frag  phong.frag  phong.vert  triangle.vert  unlit.frag
SCOP/res/directionlight/: gouraud.vert  phong.frag  phong.vert
SCOP/res/pointlight/: pointlight.frag  pointlight.vert
SCOP/res/spotlight/: spotlight.frag  spotlight.vert
SCOP/src/: main.cpp
SDK/lib/darwin/: libEGL.dylib
blog/: 220824_EGL.md  220828_EGL.md  220829_BasicStructure.md  220830_RenderingPipeline.md  220830_Shader.md  220901_Shader.md  220907_Buffer.md  220907_VertexBuffer.md  220916_IndexBuffer.md  220916_IndexBufferVertexArray.md  220927_VertexArray.md  221009_Texture.md  221012_LoadObject.md
